<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_task"
        android:enabled="true"
        android:icon="@drawable/ic_widget_add"
        android:shortcutShortLabel="@string/shortcut_add_task_short"
        android:shortcutLongLabel="@string/shortcut_add_task_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.lortodo"
            android:targetClass="org.lortodo.MainActivity">
            <extra android:name="action" android:value="quick_add" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="view_today"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_today_short"
        android:shortcutLongLabel="@string/shortcut_today_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.lortodo"
            android:targetClass="org.lortodo.MainActivity">
            <extra android:name="action" android:value="view_today" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="search_tasks"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.lortodo"
            android:targetClass="org.lortodo.MainActivity">
            <extra android:name="action" android:value="search" />
        </intent>
    </shortcut>
</shortcuts>
